--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,6 +37,7 @@
 
 .image-profile img,.image-profile {
     border-radius: 50%;
+   
 }
 
 .card {
@@ -74,8 +75,10 @@
 
 .profile-menu-profile {
     position: absolute;
-    margin-top: 120px;
-    margin-left: 20px;
+    /* margin-top: 50px;
+    margin-left: 5px; */
+    width: 10%;
+    height: 10%;
 }
 
 .post-header {
