--- a/CSS/style.css
+++ b/CSS/style.css
@@ -75,10 +75,8 @@
 
 .profile-menu-profile {
     position: absolute;
-    /* margin-top: 50px;
-    margin-left: 5px; */
-    width: 10%;
-    height: 10%;
+    margin-top: 120px;
+    margin-left: 20px;
 }
 
 .post-header {
