--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,6 +46,13 @@
     align-items: center;
     justify-content: flex-start;
 }
+.comment-post {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    
+
+}
 
 .image-profile img,.image-profile {
     border-radius: 50%;
@@ -86,7 +93,7 @@
     position: absolute;
     width: 10%;
     height: 10%;
-    margin-top: 120px;
+    margin-top: 140px;
     margin-left: 20px;
 }
 
