--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Questrial', sans-serif;
     font-size: 14px;
 }
+
 
 .header {
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
@@ -93,7 +96,7 @@
     position: absolute;
     width: 10%;
     height: 10%;
-    margin-top: 140px;
+    margin-top: 100px;
     margin-left: 20px;
 }
 
@@ -107,3 +110,92 @@
     justify-content: flex-end;
 }
 
+/* login */
+
+
+
+.h1{
+    position: absolute;
+    left: 10%;
+    top: 40%;
+    width: 550px;
+    
+}
+.title{
+    font-size: 60px;
+    margin-bottom: 5px;
+    color: #1877f2;
+}
+.pra{
+    font-size: 30px;
+}
+.main-form{
+    position: absolute;
+    background-color: #ffff;
+    width: 400px;
+    height: 300px;
+    left: 55%;
+    top: 25%;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 9px rgb(164, 163, 240),
+                -1px -1px 5px rgb(164, 163, 240);
+}
+.main-input{
+    margin: 15px;
+    margin-top: 40px;
+    padding: 15px;
+    width: 93%;
+    background-color: #ffff;
+    outline: none;
+    border: 1px solid rgb(184, 184, 184);
+    border-radius: 5px;
+    font-size: 15px; 
+      
+}
+.main-input:focus{
+    border: 1px solid #adc4e4;
+    box-shadow: 1px 1px 1px #76adf5,
+                -1px -1px 1px #1877f2;
+}
+.login-btn{
+   
+    margin: 10px ;
+    padding: 15px;
+    width: 95%;
+    border-radius: 5px;
+    background-color: #306bb8;
+    color: #ffff;
+    font-size: 20px;
+    border: none;
+
+}
+.p{
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 50px;
+    border-bottom: 1px solid rgb(184, 184, 184) ;
+    margin: 20px;
+    background: none;
+}
+
+.createAcount{
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 95px;
+    width: 50%;
+    
+    margin-bottom: 20px;
+    padding: 15px;
+    background-color: #2aaa10;
+    border-radius: 5px;
+}
+.btn-createAcount{
+    text-decoration: none;
+    background: none;
+    color: #ffff;
+    font-size: 17px;
+    
+}
