--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -113,7 +114,6 @@
 /* login */
 
 
-
 .h1{
     position: absolute;
     left: 10%;
@@ -121,21 +121,21 @@
     width: 550px;
     
 }
-.title{
+.titleLogin{
     font-size: 60px;
     margin-bottom: 5px;
     color: #1877f2;
 }
-.pra{
+.praLogin{
     font-size: 30px;
 }
 .main-form{
     position: absolute;
     background-color: #ffff;
     width: 400px;
-    height: 300px;
+    height: 450px;
     left: 55%;
-    top: 25%;
+    top: 15%;
     margin: 10px;
     border-radius: 10px;
     box-shadow: 2px 2px 9px rgb(164, 163, 240),
@@ -143,7 +143,7 @@
 }
 .main-input{
     margin: 15px;
-    margin-top: 40px;
+    margin-top: 30px;
     padding: 15px;
     width: 93%;
     background-color: #ffff;
@@ -182,7 +182,7 @@
 
 .createAcount{
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-bottom: 20px;
     margin-left: 95px;
     width: 50%;
@@ -198,4 +198,187 @@
     color: #ffff;
     font-size: 17px;
     
+}
+
+/* sign up */
+
+
+.modal{
+    position: absolute;
+    top: 10%;
+    width: 90%;
+}
+h1{
+    position: absolute;
+    left: 10%;
+    top: 40%;
+    width: 550px;
+    
+    
+}
+.title{
+    font-size: 60px;
+    margin-bottom: 5px;
+    color: #1877f2;
+}
+.pra{
+    position: absolute;
+    font-size: 30px;
+    top:53%;
+    left: 10%;
+}
+.modal-signup p{
+    padding: 5px;
+}
+.modal-signup{
+    position: absolute;
+    width: 100%;
+    left: 30%;
+    max-width: 25%;
+    margin:  auto;
+    height:400px;
+    margin-top: 100px;
+    background-color: white;
+    position: relative;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 9px rgb(164, 163, 240),
+                -1px -1px 5px rgb(164, 163, 240);
+}
+
+.modal-signup-heading{
+    
+    width: 100%;
+    margin-top: 5px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #ccc;
+    color: #1877f2;
+}
+.modal-signup-heading .modal-signup-name{
+    
+    font-size: 30px;
+    font-weight: bold;
+}
+.modal-signup-heading .modal-signup-child-name{
+    
+    font-size: 17px;
+    margin-top: 5px;
+}
+.modal-signup-name{
+    
+    width: 100%;
+    display: flex;
+    margin-top: 10px;
+    justify-content: space-between
+}
+.modal-signup-name input[type=text]{
+    
+    width: 100%;
+    padding:8px;
+    font-size: 17px;
+    border: none;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #eee;
+}
+
+.modal-signup-email{
+    
+    width: 100%;
+    display: flex;
+    margin-top: 10px;
+}
+.modal-signup-email input[type=email]{
+    
+    width: 100%;
+    padding:8px;
+    font-size: 17px;
+    border: none;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #eee;
+}
+
+.modal-signup-password{
+    
+    width: 100%;
+    display: flex;
+    margin-top: 10px;
+    
+}
+.modal-signup-password input[type=password]{
+    
+    width: 100%;
+    padding:8px;
+    font-size: 17px;
+    border: none;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #eee;
+}
+
+.modal-gender{
+    
+   width: 100%;
+   margin-top: 10px;
+   display: flex;
+   align-items: center; 
+}
+
+.modal-gender-choice{
+   
+    width: 100%;
+    margin-top: 5px;
+    display: flex;
+    justify-content: flex-start;
+}
+.modal-gender-name{
+    
+     width: 32%;
+     border: 1px solid #ccc;
+     margin-right: 5px;
+     padding: 5px;
+     border-radius: 5px;
+     font-size: 17px;
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+}
+.modal-signup-terms{
+    width: 100%;
+    margin-top: 15px; 
+    font-size: 12px;
+}
+
+.modal-signup-button{
+    
+    width: 100%;
+    max-width: 200px;
+    margin: auto;
+    margin-top: 20px;
+}
+.modal-signup-button button{ 
+    
+    width: 100%;
+    padding: 10px;
+    background-color:#32cd32;
+    color: white;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;  
+}
+
+
+/* comment_view */
+
+.box-comment{
+    background-color: rgb(228, 228, 228);
+    border: none;
+    box-shadow: none;
+    border-radius: 10px;
+}
+.text-comment{
+    margin-left:25px;
+    margin-top: -30px;
 }
