--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,10 +17,12 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    padding: 0;
 }
 
 .logo {
     cursor: pointer;
+    padding: 0;
 }
 
 .menu-item {
@@ -34,6 +36,11 @@
     opacity: 0.6;
 }
 
+.menu-item:hover {
+    opacity: 1;
+    border-bottom: 4px solid #0D29BD;
+}
+
 .btn {
     background-color: #0D29BD;
     color: #fff;
@@ -41,9 +48,9 @@
 
 .active {
     opacity: 1;
-    margin-bottom: 10px;
-    font-size: 16px;
+    border-bottom: 4px solid #0D29BD;
 }
+
 
 .profile-post {
     display: flex;
@@ -102,8 +109,8 @@
 
 .profile-menu-profile {
     position: absolute;
-    width: 10%;
-    height: 10%;
+    width: 90px;
+    height: 90px;
     margin-top: 130px;
     margin-left: 20px;
 }
