--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,7 +55,7 @@
 .profile-post {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
 }
 .comment-post {
     display: flex;
